# praetor

./: .copier-answers.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  ruff.toml
docs/: api.md
docs/api/: praetord.md
logs/: protocol_validator.jsonl
src/praetor/: __init__.py  praetord.py  protocol_info.py
src/praetor/connection/: __init__.py  socket_manager.py
src/praetor/exceptions/: __init__.py  base_error.py  validator_error.py  validator_wireshark_error.py
src/praetor/validator/: __init__.py  device_validator.py  pyshark_validator.py
src/protocol_validator/: async_packet_validator.py  base_error.py  protocol_info.py  validator_base.py  validator_error.py  validator_wireshark_error.py
src/protocol_validator/cfg/: log_configuration.py
test/: sample.py
tests/: __init__.py  ruff.toml  test_device_validator.py  test_sanity.py  test_socket_manager.py
typings/pyshark/: __init__.pyi  cache.pyi  config.pyi  ek_field_mapping.pyi
typings/pyshark/capture/: capture.pyi  file_capture.pyi  inmem_capture.pyi  live_capture.pyi  live_ring_capture.pyi  remote_capture.pyi
typings/pyshark/packet/: common.pyi  consts.pyi  fields.pyi  packet.pyi  packet_summary.pyi
typings/pyshark/packet/layers/: base.pyi  ek_layer.pyi  json_layer.pyi  xml_layer.pyi
typings/pyshark/tshark/: tshark.pyi
typings/pyshark/tshark/output_parser/: base_parser.pyi  tshark_ek.pyi  tshark_json.pyi  tshark_xml.pyi
