#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_validator"]

[project]
name = "protocol_validator"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "mypy",
    "pyright",
    "readmeai",
    "pre-commit",
    "scapy>=2.7.0",
    "pyshark>=0.6",
    "ty>=0.0.17",
    "tool>=0.8.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 180
target-version = "py312"
exclude = [".git", ".mypy_cache", ".ruff_cache", "node_modules", "venv", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0913",
    "PLR2004",
    "G004",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "INP001",
    "ANN401",
    "COM812",
    "TRY003",
    "EM101",
    "EM102",
    "BLE001",
    "T201",
    "S311",
    "C408",
    "S101",
    "PERF203",
]
unfixable = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
all = "error"