#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praetor"]

[project]
name = "praetor"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.7.0",
    "pyshark>=0.6",
    "tool>=0.8.0",
    "decima",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "cursus",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
test = [
    "pytest>=9.0.2",
]

[tool.uv]
managed = true

[tool.uv.sources]
decima = { git = "https://github.com/cvasilatos/decima.git" }
cursus = { git = "https://github.com/cvasilatos/cursus.git" }

[tool.ruff]
line-length = 180
target-version = "py312"
exclude = [".git", ".ruff_cache", "node_modules", "venv", ".venv", "site", "dist", "build"]

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src/praetor"]

[tool.ty.rules]
all = "error"
